Make relative imports work

BUG:322534
REVIEW:111928
CCMAIL:haizaar@haizaar.com